--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -111,6 +111,16 @@ gl_FragColor = abs(p*sin(4.*p.x)*sin(4.*p.y));
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>Run</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -119,7 +129,7 @@ gl_FragColor = abs(p*sin(4.*p.x)*sin(4.*p.y));
      <x>0</x>
      <y>0</y>
      <width>571</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
