--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -24,7 +24,16 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <property name="margin">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
@@ -36,7 +45,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabVtx">
        <attribute name="title">
@@ -46,16 +55,25 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <widget class="QPlainTextEdit" name="vertexShader">
           <property name="plainText">
-           <string>varying vec4 p;
-void main()
-{
-p=gl_Position=gl_Vertex; p.z=length(p.xy);
+           <string>#version 150 core
+in vec2 vertex;
+void main() {
+gl_Position = vec4(vertex, 0., 1.);
 }
 </string>
           </property>
@@ -71,17 +89,27 @@ p=gl_Position=gl_Vertex; p.z=length(p.xy);
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <widget class="QPlainTextEdit" name="fragmentShader">
           <property name="plainText">
-           <string>varying vec4 p;
-void main()
-{
-gl_FragColor = abs(p*sin(4.*p.x)*sin(4.*p.y));
-}</string>
+           <string>#version 150 core
+out vec4 color;
+void main() {
+color = vec4(1.);
+}
+</string>
           </property>
          </widget>
         </item>
@@ -92,15 +120,21 @@ gl_FragColor = abs(p*sin(4.*p.x)*sin(4.*p.y));
     <item>
      <widget class="QTextBrowser" name="errorLog">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>320</width>
+        <height>80</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>200</height>
+        <height>80</height>
        </size>
       </property>
       <property name="sizeIncrement">
