--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -69,13 +69,8 @@
         </property>
         <item>
          <widget class="QPlainTextEdit" name="vertexShader">
-          <property name="plainText">
-           <string>#version 150 core
-in vec2 vertex;
-void main() {
-gl_Position = vec4(vertex, 0., 1.);
-}
-</string>
+          <property name="enabled">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -103,13 +98,8 @@ gl_Position = vec4(vertex, 0., 1.);
         </property>
         <item>
          <widget class="QPlainTextEdit" name="fragmentShader">
-          <property name="plainText">
-           <string>#version 150 core
-out vec4 color;
-void main() {
-color = vec4(1.);
-}
-</string>
+          <property name="enabled">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -146,7 +136,10 @@ color = vec4(1.);
      </widget>
     </item>
     <item>
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QCheckBox" name="runBox">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Run</string>
       </property>
@@ -163,9 +156,17 @@ color = vec4(1.);
      <x>0</x>
      <y>0</y>
      <width>571</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionNew"/>
+    <addaction name="actionSave"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -175,8 +176,57 @@ color = vec4(1.);
     <bool>false</bool>
    </attribute>
   </widget>
+  <action name="actionNew">
+   <property name="text">
+    <string>New</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionNew</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>menuOpenNew()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>285</x>
+     <y>224</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionSave</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>menuSave()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>285</x>
+     <y>224</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
